add js call any object method

--- a/JSOCInteractionDemo/JSOCInteractionDemo/Resource/CallJS.html
+++ b/JSOCInteractionDemo/JSOCInteractionDemo/Resource/CallJS.html
@@ -1,24 +1,25 @@
 <!--html>
     <body>
-        Call test.js file
-        <script language="JavaScript" src="Alert.js">
-            </script>
-    </body>
-</html-->
+ Call test.js file
+ <script language="JavaScript" src="Alert.js">
+ </script>
+ </body>
+ </html-->
 
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
             <title>test.worker</title>
-    </head>
+            </head>
     
     <body>
         This is html content, click button to call js method !
         <script>
             function test()
             {
-                alert("oc call js successfully !");
+                    alert(mApplication.getVersion());
+<!--                alert("oc call js successfully !");-->
             }
         </script>
     </body>
