add a html button

--- a/JSOCInteractionDemo/JSOCInteractionDemo/Resource/CallJS.html
+++ b/JSOCInteractionDemo/JSOCInteractionDemo/Resource/CallJS.html
@@ -15,11 +15,12 @@
     
     <body>
         This is html content, click button to call js method !
+        <input type="button" onClick="test()" value="这个是html中的按钮"/></td>
         <script>
             function test()
             {
-                    alert(mApplication.getVersion());
-<!--                alert("oc call js successfully !");-->
+                alert(mApplication.getVersion());
+                <!--                alert("oc call js successfully !");-->
             }
         </script>
     </body>
